# LinuxApplicationDevelopment2022

01_GitBuildReq/: hello  hello.c
02_TerminalProject/: Makefile  Show.c  text.txt
03_Multifile/: Makefile
04_Text/: hello.txt  randomizer.sh
05_Debugging/: Makefile  range.c  test1.gdb  test1_correct.txt  test2.gdb  test2_correct.txt
06_Regexps/: Makefile  esub.c  tests.sh
07_TracingFencing/: Makefile  move.c  my_lib.c  test.sh
09_I18n/po/: meson.build  ru.po
09_I18n/src/: num-game.c
12_Documenting/: meson.build  readme.md
12_Documenting/man/: num-game.6
12_Documenting/po/: POTFILES  ru.po
12_Documenting/src/: num-game.c
